tests/negative/neg_receive_target_not_null.safe
-- Test: neg_receive_target_not_null
-- Description: Access-typed channel elements are rejected before receive-target ownership checks run.
-- Expected: REJECT source_frontend_error

package neg_Receive_Target_Not_Null

   type payload is record
      value : integer;


   type payload_Ptr is access payload;

   channel Data_Ch : payload_Ptr capacity 1;

   function run
      Target : payload_Ptr = new ((value = 2) as payload);

      receive Data_Ch, Target;



